# enjoy

./: AUTHORS  Makefile.am  configure.ac  gettext.h
config/: .gitignore  Makefile.am  emotion.plugin.src  lms.charsets.src  lms.parsers.src
data/: .gitignore  Makefile.am  enjoy.desktop.in
data/themes/: Makefile.am  README.txt
data/themes/enjoy/: Makefile.am  main.edc  panel.edc  playlist.edc  principal.edc
data/themes/enjoy/fonts/: Makefile.am
data/themes/enjoy/images/: Makefile.am  saida.txt
m4/: Makefile.am  ac-modules.m4
src/: Makefile.am
src/lib/: Makefile.am
src/tests/: Makefile.am
