MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.h.in \
	config.sub \
	configure \
	depcomp \
	install-sh \
	ltmain.sh \
	missing

EXTRA_DIST = config.rpath  \
	gettext.h \
	m4/Makefile.in \
	README \
	AUTHORS \
	COPYING

SUBDIRS = m4 src data config

ACLOCAL_AMFLAGS = -I m4
